# aio-rom

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  conf  conf2  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  python-publish.yml
aio_rom/: __init__.py  attributes.py  collections.py  dataclasses.py  fields.py  model.py  mypy.py  proxy.py  session.py  types.py  utils.py  utils.pyi
rom/: attributes.py  mypy.py  session.py  types.py
src/rom/: __init__.py  attributes.py  dataclasses.py  exception.py  fields.py  fields.pyi  model.py  mypy.py  session.py  types.py
tests/: __init__.py  aio_rom.ini  conftest.py  rom.ini  test_fields.py  test_model.py  test_mypy.py  test_proxy.py  test_redis.py  test_redis_benchmark.py  test_redis_collections.py
tests/test-data/unit/: mypy-plugin.test
