[metadata]
name = aio-rom
description = asyncio based Redis object mapper
long_description = file: README.md
long_description_content_type = text/markdown
author = Federico Jaite
author_email = fede_654_87@hotmail.com
url = https://github.com/fedej/aio-rom
project_urls =
    Source=https://github.com/fedej/aio-rom
    Tracker=https://github.com/fedej/aio-rom/issues
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Database :: Front-Ends

[options]
include_package_data = True
packages = find:
package_dir =
  =src
python_requires = >=3.7
install_requires =
    aioredis >= 1.3.1
    typing-extensions >= 3.10.0.0

[options.packages.find]
where = src

[options.package_data]
* = *.typed

[options.extras_require]
testing =
    asynctest
    black
    flake8
    mypy
    pytest
    pytest-asyncio
    pytest-benchmark
    pytest-cov


[tox:tox]
minversion = 3.7
isolated_build = true
envlist =
    clean
    black
    flake8
    mypy
    py37,py38,py39
skip_missing_interpreters = true

[gh-actions]
python =
    3.7: clean, py37, black, flake8
    3.8: clean, py38
    3.9: clean, py39

[testenv]
passenv = CI
commands = pytest --cov=rom --cov-append --cov-report=term-missing --cov-branch  --cov-report=xml
extras = testing

[testenv:black]
commands = black --check src/ tests/ setup.py
extras = testing

[testenv:flake8]
commands = flake8 src/ tests/ setup.py
extras = testing

[testenv:mypy]
commands = mypy --install-types --non-interactive --strict src/
extras = testing

[testenv:clean]
deps = coverage[toml]
skip_install = true
commands = coverage erase

[flake8]
max-line-length = 88

[mypy]
plugins = rom.mypy
